# solp

./: .clang-format  README.md  meson.build
.github/workflows/: ccpp.yml
scripts/: lpgen.py
src/: meson.build  solp.cpp  solp.h
subprojects/: eigen.wrap
test/: benchmark.cpp  catch.hpp  helpers.h  meson.build  random_matrices.cpp  unit_tests.cpp
